test_suite/alan-2022-examples/failing/007530_mutation.alan
source hi begin rem while 788 do relax end end
